--- a/config/site/core.extension.yml
+++ b/config/site/core.extension.yml
@@ -1,4 +1,6 @@
 module:
+  admin_toolbar: 0
+  adminimal_admin_toolbar: 0
   automated_cron: 0
   big_pipe: 0
   block: 0
@@ -51,6 +53,7 @@ theme:
   classy: 0
   bartik: 0
   seven: 0
+  adminimal_theme: 0
 profile: standard
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
