--- a/web/composer.json
+++ b/web/composer.json
@@ -8,7 +8,9 @@
         "wikimedia/composer-merge-plugin": "^1.4",
         "drupal/focal_point": "^1.0@beta",
         "drupal/scheduler": "^1.0",
-        "drupal/hide_revision_field": "^1.1"
+        "drupal/hide_revision_field": "^1.1",
+        "drupal/adminimal_theme": "^1.3",
+        "drupal/adminimal_admin_toolbar": "^1.5"
     },
     "replace": {
         "drupal/core": "^8.5"
