--- a/config/site/core.entity_form_display.node.event.default.yml
+++ b/config/site/core.entity_form_display.node.event.default.yml
@@ -12,7 +12,7 @@ dependencies:
   module:
     - datetime
     - file
-    - image
+    - focal_point
     - scheduler
     - text
 id: node.event.default
@@ -47,8 +47,10 @@ content:
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
+      preview_link: true
+      offsets: '50,50'
     third_party_settings: {  }
-    type: image_image
+    type: image_focal_point
     region: content
   promote:
     type: boolean_checkbox
