Creating an announcement content type

--- a/config/site/field.field.node.announcement.body.yml
+++ b/config/site/field.field.node.announcement.body.yml
@@ -1,10 +1,10 @@
-uuid: 8609d64d-cbc6-4b28-a36d-3962fafe7b67
+uuid: 6571129f-86d9-4f0e-816b-15c907be54f5
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.body
-    - node.type.article
+    - node.type.announcement
   module:
     - custom_add_another
     - text
@@ -12,12 +12,10 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-_core:
-  default_config_hash: Ay3b2hq42cpQTFB_lNu8S2ZxuVIY6-dlBsc7vLeJ-YY
-id: node.article.body
+id: node.announcement.body
 field_name: body
 entity_type: node
-bundle: article
+bundle: announcement
 label: Body
 description: ''
 required: false
