--- a/config/site/node.type.announcement.yml
+++ b/config/site/node.type.announcement.yml
@@ -1,4 +1,4 @@
-uuid: 1f8f4162-103f-4a4e-9a9e-6ad86efb9b6d
+uuid: 52651562-352c-44ef-b1a4-fbb128370ec8
 langcode: en
 status: true
 dependencies:
@@ -7,9 +7,8 @@ dependencies:
     - scheduler
 third_party_settings:
   menu_ui:
-    available_menus:
-      - main
-    parent: 'main:'
+    available_menus: {  }
+    parent: ''
   scheduler:
     expand_fieldset: when_required
     fields_display_mode: vertical_tab
@@ -21,12 +20,10 @@ third_party_settings:
     unpublish_enable: true
     unpublish_required: false
     unpublish_revision: false
-_core:
-  default_config_hash: AeW1SEDgb1OTQACAWGhzvMknMYAJlcZu0jljfeU3oso
-name: Article
-type: article
-description: 'Use <em>articles</em> for time-sensitive content like news, press releases or blog posts.'
+name: 'Announcement & News'
+type: announcement
+description: 'Use Announcement & News to share information about the school and the community.'
 help: ''
 new_revision: true
 preview_mode: 1
-display_submitted: true
+display_submitted: false
