--- a/config/site/node.type.announcement.yml
+++ b/config/site/node.type.announcement.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
+    - hide_revision_field
     - menu_ui
     - scheduler
 third_party_settings:
@@ -20,6 +21,9 @@ third_party_settings:
     unpublish_enable: true
     unpublish_required: false
     unpublish_revision: false
+  hide_revision_field:
+    hide: true
+    personalizable: false
 name: 'Announcement & News'
 type: announcement
 description: 'Use Announcement & News to share information about the school and the community.'
