--- a/config/site/node.type.page.yml
+++ b/config/site/node.type.page.yml
@@ -1,7 +1,30 @@
 uuid: 215c5f87-2633-480d-893b-643082a97019
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - hide_revision_field
+    - menu_ui
+    - scheduler
+third_party_settings:
+  hide_revision_field:
+    hide: true
+    personalizable: false
+  menu_ui:
+    available_menus:
+      - main
+    parent: 'main:'
+  scheduler:
+    expand_fieldset: when_required
+    fields_display_mode: vertical_tab
+    publish_enable: false
+    publish_past_date: error
+    publish_required: false
+    publish_revision: false
+    publish_touch: false
+    unpublish_enable: false
+    unpublish_required: false
+    unpublish_revision: false
 _core:
   default_config_hash: KuyA4NHPXcmKAjRtwa0vQc2ZcyrUJy6IlS2TAyMNRbc
 name: 'Basic page'
