Adding Google Translation functionality

--- a/web/composer.json
+++ b/web/composer.json
@@ -14,7 +14,8 @@
         "drupal/field_group": "^1.0",
         "drupal/paragraphs": "^1.2",
         "drupal/custom_add_another": "^1.0@beta",
-        "drupal/fontawesome": "^2.0"
+        "drupal/fontawesome": "^2.0",
+        "drupal/gtranslate": "^1.13"
     },
     "replace": {
         "drupal/core": "^8.5"
