Adding paragraph types

--- a/web/composer.json
+++ b/web/composer.json
@@ -15,7 +15,8 @@
         "drupal/paragraphs": "^1.2",
         "drupal/custom_add_another": "^1.0@beta",
         "drupal/fontawesome": "^2.0",
-        "drupal/gtranslate": "^1.13"
+        "drupal/gtranslate": "^1.13",
+        "drupal/google_map_field": "^1.5"
     },
     "replace": {
         "drupal/core": "^8.5"
