--- a/config/site/core.extension.yml
+++ b/config/site/core.extension.yml
@@ -26,6 +26,7 @@ module:
   filter: 0
   focal_point: 0
   fontawesome: 0
+  google_map_field: 0
   gtranslate: 0
   help: 0
   hide_revision_field: 0
