--- a/config/site/core.entity_view_display.user.user.default.yml
+++ b/config/site/core.entity_view_display.user.user.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.user.user.field_job_title
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
@@ -15,6 +16,14 @@ targetEntityType: user
 bundle: user
 mode: default
 content:
+  field_job_title:
+    weight: 6
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   member_for:
     weight: 5
     region: content
