--- a/config/site/core.entity_view_display.paragraph.text_with_image.default.yml
+++ b/config/site/core.entity_view_display.paragraph.text_with_image.default.yml
@@ -3,18 +3,32 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.text_with_image.field_text_with_image_button
     - field.field.paragraph.text_with_image.field_text_with_image_header
     - field.field.paragraph.text_with_image.field_text_with_image_image
     - field.field.paragraph.text_with_image.field_text_with_image_text
     - paragraphs.paragraphs_type.text_with_image
   module:
     - image
+    - link
     - text
 id: paragraph.text_with_image.default
 targetEntityType: paragraph
 bundle: text_with_image
 mode: default
 content:
+  field_text_with_image_button:
+    weight: 3
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
+    region: content
   field_text_with_image_header:
     weight: 0
     label: above
