--- a/config/site/block.block.eses_help.yml
+++ b/config/site/block.block.eses_help.yml
@@ -1,4 +1,4 @@
-uuid: 9b793f34-193b-40b3-b4dc-64f9f99d949e
+uuid: 0435b440-00e9-4d96-88ba-3741717f698f
 langcode: en
 status: true
 dependencies:
@@ -10,8 +10,8 @@ _core:
   default_config_hash: 8I8iACSa0sKO3k3jlvUG1ge52rfcKX7USJAQYnzuBgg
 id: eses_help
 theme: eses
-region: content
-weight: -8
+region: help
+weight: -5
 provider: null
 plugin: help_block
 settings:
