--- a/config/site/eses.settings.yml
+++ b/config/site/eses.settings.yml
@@ -1,6 +1,10 @@
 cdn_provider: ''
+logo:
+  path: themes/custom/eses/images/eses_logo.png
+  url: ''
+  use_default: false
 _core:
-  default_config_hash: _5qrDuRmWmRVjW00si3U1s1NrgrocA4N653EYGRfgEE
+  default_config_hash: 2gj5VADHA5qZ7eCPDBzaY3sRIiA4d4uD4cfl5z7Yfv8
 favicon:
   mimetype: image/vnd.microsoft.icon
   path: ''
@@ -9,15 +13,11 @@ favicon:
 schemas:
   bootstrap: 8000
   eses: 8000
+features:
+  comment_user_picture: false
+  comment_user_verification: false
+  favicon: true
+  node_user_picture: false
+navbar_position: fixed-top
 table_responsive: '-1'
 table: ''
-features:
-  comment_user_picture: true
-  comment_user_verification: true
-  favicon: true
-  node_user_picture: true
-logo:
-  path: ''
-  url: ''
-  use_default: true
-tooltip_enabled: 0
