--- a/config/site/system.theme.global.yml
+++ b/config/site/system.theme.global.yml
@@ -4,13 +4,13 @@ favicon:
   url: ''
   use_default: true
 features:
-  comment_user_picture: true
-  comment_user_verification: true
-  favicon: true
-  node_user_picture: true
+  comment_user_picture: false
+  comment_user_verification: false
+  favicon: false
+  node_user_picture: false
 logo:
-  path: ''
+  path: themes/custom/eses/images/eses_logo.png
   url: ''
-  use_default: true
+  use_default: false
 _core:
   default_config_hash: 9rAU4Pku7eMBQxauQqAgjzlcicFZ2As6zEa6zvTlCB8
