Creating a new `subhead` region in the ESES theme

--- a/web/themes/custom/eses/eses.info.yml
+++ b/web/themes/custom/eses/eses.info.yml
@@ -10,6 +10,7 @@ regions:
   navigation: 'Navigation'
   navigation_collapsible: 'Navigation (Collapsible)'
   header: 'Top Bar'
+  sub_header: 'Sub Header'
   highlighted: 'Highlighted'
   help: 'Help'
   content: 'Content'
