--- a/web/modules/contrib/fontawesome/fontawesome.libraries.yml
+++ b/web/modules/contrib/fontawesome/fontawesome.libraries.yml
@@ -1,10 +1,10 @@
 fontawesome.svg:
-  remote: https://use.fontawesome.com/releases/v5.0.9/fontawesome-free-5.0.9.zip
+  remote: https://use.fontawesome.com/releases/v5.0.13/fontawesome-free-5.0.13.zip
   license: &fontawesome_svg_license
     name: CC BY 4.0
     url: https://fontawesome.com/license
     gpl-compatible: true
-  version: &fontawesome_version "5.0.9"
+  version: &fontawesome_version "5.0.13"
   js:
     /libraries/fontawesome/svg-with-js/js/fontawesome-all.min.js: { minified: true }
 
@@ -17,7 +17,7 @@ fontawesome.svg.shim:
     - fontawesome/fontawesome.svg
 
 fontawesome.webfonts:
-  remote: https://use.fontawesome.com/releases/v5.0.9/fontawesome-free-5.0.9.zip
+  remote: https://use.fontawesome.com/releases/v5.0.13/fontawesome-free-5.0.13.zip
   license: &fontawesome_webfonts_license
     name: SIL OFL 1.1
     url: https://fontawesome.com/license
@@ -27,7 +27,7 @@ fontawesome.webfonts:
     theme:
       /libraries/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css: { minified: true }
 
-fontawesome.webfonts.pseudoElements:
+fontawesome.svg.pseudoElements:
   version: *fontawesome_version
   license: *fontawesome_webfonts_license
   js:
