--- a/config/site/views.view.calendar.yml
+++ b/config/site/views.view.calendar.yml
@@ -11,6 +11,7 @@ dependencies:
     - node
     - text
     - user
+    - views_fieldsets
 id: calendar
 label: Calendar
 module: views
@@ -73,10 +74,79 @@ display:
             last: 'Last »'
           quantity: 9
       style:
-        type: default
+        type: html_list
+        options:
+          grouping: {  }
+          row_class: event
+          default_row_class: false
+          type: ul
+          wrapper_class: mini-calendar
+          class: events
       row:
         type: fields
+        options:
+          default_field_elements: false
+          inline: {  }
+          separator: ''
+          hide_empty: true
       fields:
+        fieldset:
+          id: fieldset
+          table: views
+          field: fieldset
+          relationship: none
+          group_type: group
+          admin_label: 'Date (wrapped)'
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          fields:
+            - field_calendar_event_date
+            - field_calendar_event_date_1
+          wrapper: div
+          legend: ''
+          classes: date
+          collapsible: 0
+          collapsed: 0
+          plugin_id: fieldset
         field_calendar_event_date:
           id: field_calendar_event_date
           table: node__field_calendar_event_date
@@ -113,14 +183,14 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: ''
-          element_class: ''
+          element_type: span
+          element_class: month
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
-          element_wrapper_type: ''
+          element_wrapper_type: '0'
           element_wrapper_class: ''
-          element_default_classes: true
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -129,7 +199,7 @@ display:
           type: datetime_custom
           settings:
             timezone_override: America/New_York
-            date_format: m
+            date_format: M
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -177,14 +247,14 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: ''
-          element_class: ''
+          element_type: span
+          element_class: day
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
-          element_wrapper_type: ''
+          element_wrapper_type: '0'
           element_wrapper_class: ''
-          element_default_classes: true
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -309,9 +379,9 @@ display:
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
+          element_wrapper_type: div
+          element_wrapper_class: details
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -402,7 +472,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          order: DESC
+          order: ASC
           exposed: false
           expose:
             label: ''
