--- a/config/site/core.entity_view_display.node.event.default.yml
+++ b/config/site/core.entity_view_display.node.event.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.event.body
+    - field.field.node.event.field_calls_to_action
     - field.field.node.event.field_event_image
     - field.field.node.event.field_forms_documents
     - field.field.node.event.field_important_dates
@@ -23,6 +24,15 @@ content:
     type: text_default
     weight: 101
     settings: {  }
+    third_party_settings: {  }
+    region: content
+  field_calls_to_action:
+    type: entity_reference_revisions_entity_view
+    weight: 106
+    label: above
+    settings:
+      view_mode: default
+      link: ''
     third_party_settings: {  }
     region: content
   field_event_image:
