--- a/config/site/field.field.node.event.field_important_dates.yml
+++ b/config/site/field.field.node.event.field_important_dates.yml
@@ -12,7 +12,7 @@ dependencies:
 third_party_settings:
   custom_add_another:
     custom_add_another: 'Add Another Important Date'
-    custom_remove: ''
+    custom_remove: 'Remove this Date'
 id: node.event.field_important_dates
 field_name: field_important_dates
 entity_type: node
