Configuring paragraphs for lists and columns

--- a/config/site/field.field.node.page.field_page_section.yml
+++ b/config/site/field.field.node.page.field_page_section.yml
@@ -7,6 +7,7 @@ dependencies:
     - node.type.page
     - paragraphs.paragraphs_type.basic_text
     - paragraphs.paragraphs_type.large_image
+    - paragraphs.paragraphs_type.list
     - paragraphs.paragraphs_type.text_with_image
     - paragraphs.paragraphs_type.text_with_map
   module:
@@ -33,6 +34,7 @@ settings:
     target_bundles:
       basic_text: basic_text
       large_image: large_image
+      list: list
       text_with_image: text_with_image
       text_with_map: text_with_map
     target_bundles_drag_drop:
@@ -48,10 +50,16 @@ settings:
       large_image:
         enabled: true
         weight: 8
+      list:
+        enabled: true
+        weight: 9
       text_with_image:
         enabled: true
         weight: 9
       text_with_map:
         enabled: true
         weight: 10
+      button:
+        weight: 12
+        enabled: false
 field_type: entity_reference_revisions
