--- a/config/site/core.entity_form_display.paragraph.basic_text.default.yml
+++ b/config/site/core.entity_form_display.paragraph.basic_text.default.yml
@@ -3,7 +3,9 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.basic_text.field_basic_text_columns
     - field.field.paragraph.basic_text.field_basic_text_formatted_text
+    - field.field.paragraph.basic_text.field_basic_text_header
     - paragraphs.paragraphs_type.basic_text
   module:
     - text
@@ -12,13 +14,28 @@ targetEntityType: paragraph
 bundle: basic_text
 mode: default
 content:
+  field_basic_text_columns:
+    weight: 1
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
+    type: number
+    region: content
   field_basic_text_formatted_text:
-    weight: 0
+    weight: 2
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+    region: content
+  field_basic_text_header:
+    weight: 0
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
 hidden:
   created: true
