--- a/config/site/core.entity_view_display.paragraph.basic_text.default.yml
+++ b/config/site/core.entity_view_display.paragraph.basic_text.default.yml
@@ -3,7 +3,9 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.basic_text.field_basic_text_columns
     - field.field.paragraph.basic_text.field_basic_text_formatted_text
+    - field.field.paragraph.basic_text.field_basic_text_header
     - paragraphs.paragraphs_type.basic_text
   module:
     - text
@@ -12,11 +14,28 @@ targetEntityType: paragraph
 bundle: basic_text
 mode: default
 content:
-  field_basic_text_formatted_text:
-    weight: 0
+  field_basic_text_columns:
+    weight: 2
     label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_integer
+    region: content
+  field_basic_text_formatted_text:
+    weight: 1
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
+  field_basic_text_header:
+    weight: 0
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
 hidden: {  }
