--- a/web/composer.json
+++ b/web/composer.json
@@ -23,7 +23,7 @@
         "drupal/bootstrap": "^3.11",
         "drupal/views_fieldsets": "^3.3",
         "drupal/ds": "^3",
-        "drupal/button_link": "1"
+        "drupal/button_link": "^1"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
