--- a/config/site/google_map_field.settings.yml
+++ b/config/site/google_map_field.settings.yml
@@ -1,5 +1,5 @@
 google_map_field_auth_method: 1
-google_map_field_apikey: ''
+google_map_field_apikey: AIzaSyBIsq6APaefalfZb8RmIdnrf7SPQM8X8fA
 google_map_field_map_client_id: ''
 _core:
   default_config_hash: mWL2dHvi9X6xknPeaUo2dSbC4IGZ-o-bdn2kRs0MzII
