--- a/config/site/core.entity_view_display.node.event.default.yml
+++ b/config/site/core.entity_view_display.node.event.default.yml
@@ -10,10 +10,34 @@ dependencies:
     - field.field.node.event.field_important_dates
     - node.type.event
   module:
+    - ds
     - entity_reference_revisions
     - image
     - text
     - user
+third_party_settings:
+  ds:
+    layout:
+      id: ds_1col
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          ds_content: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      ds_content:
+        - field_event_image
+        - body
+        - field_important_dates
+        - field_forms_documents
+        - field_calls_to_action
 id: node.event.default
 targetEntityType: node
 bundle: event
@@ -22,47 +46,45 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 101
+    weight: 1
     settings: {  }
     third_party_settings: {  }
-    region: content
+    region: ds_content
   field_calls_to_action:
     type: entity_reference_revisions_entity_view
-    weight: 106
-    label: above
+    weight: 4
+    label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    region: content
+    region: ds_content
   field_event_image:
-    weight: 102
-    label: above
+    weight: 0
+    label: hidden
     settings:
-      image_style: ''
       image_link: ''
+      image_style: ''
     third_party_settings: {  }
     type: image
-    region: content
+    region: ds_content
   field_forms_documents:
     type: entity_reference_revisions_entity_view
-    weight: 105
-    label: above
+    weight: 3
+    label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    region: content
+    region: ds_content
   field_important_dates:
     type: entity_reference_revisions_entity_view
-    weight: 104
-    label: above
+    weight: 2
+    label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    region: content
-  links:
-    weight: 100
-    region: content
-hidden: {  }
+    region: ds_content
+hidden:
+  links: true
